--- a/about.html
+++ b/about.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Наши услуги</title>
 </head>
 
@@ -88,7 +98,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">SG art project</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">SG art project</h1>
                     </div>
                 </div>
             </div>
@@ -97,10 +107,10 @@
         <main class="page">
             <section class="page__section  about">
                 <div class="container">
-                    <h2 class="section-title">О компании</h2>
+                    <h2 class="section-title" data-aos="fade-up">О компании</h2>
 
                     <div class="about__inner">
-                        <div class="about__left">
+                        <div class="about__left" data-aos="fade-up-right">
                             <div class="about__desc">
                                 <p><span class="text-black">SG art project –</span> разработка и проведение культурных программ. Вип туры. Экскурсии на русском и английском.</p>
                                 <p>Наш проект направлен на создание культурных мероприятий, которые включают в себя экскурсии, лекции, прогулки, арт-встречи.</p>
@@ -132,7 +142,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="about__right">
+                        <div class="about__right" data-aos="fade-up-left">
                             <div class="about__img">
                                 <img src="assets/images/about/about.jpg" alt="Фото девушки на фоне колонны">
                             </div>
@@ -140,7 +150,7 @@
                     </div>
                 </div>
             </section>
-            <div class="page__section  about-desc">
+            <div class="page__section  about-desc" data-aos="fade-up">
                 <div class="container">
                     <div class="about-desc__inner">
                         <p class="about-desc__text">
@@ -157,11 +167,11 @@
             </div>
             <section class="page__section  values">
                 <img class="values__decor" src="assets/images/values/decor.png" alt="">
-                <div class="container">
 
-                    <h2 class="section-title  section-title_white">Ценности</h2>
+                <div class="container">
+                    <h2 class="section-title  section-title_white" data-aos="fade-up">Ценности</h2>
                     <div class="values__inner">
-                        <div class="values__col">
+                        <div class="values__col" data-aos="fade-right">
                             <div class="values__item">
                                 <img class="values__icon" src="assets/images/values/experience.svg" alt="">
                                 <div class="values__info">
@@ -172,7 +182,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="values__col">
+                        <div class="values__col" data-aos="fade-right">
                             <div class="values__item">
                                 <img class="values__icon" src="assets/images/values/quality-assurance.svg" alt="">
                                 <div class="values__info">
@@ -183,7 +193,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="values__col">
+                        <div class="values__col" data-aos="fade-right">
                             <div class="values__item">
                                 <img class="values__icon" src="assets/images/values/working-at-home.svg" alt="">
                                 <div class="values__info">
@@ -194,7 +204,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="values__col">
+                        <div class="values__col" data-aos="fade-right">
                             <div class="values__item">
                                 <img class="values__icon" src="assets/images/values/lightness.svg" alt="">
                                 <div class="values__info">
@@ -205,7 +215,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="values__col">
+                        <div class="values__col" data-aos="fade-right">
                             <div class="values__item">
                                 <img class="values__icon" src="assets/images/values/licensing.svg" alt="">
                                 <div class="values__info">
@@ -216,7 +226,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="values__col">
+                        <div class="values__col" data-aos="fade-right">
                             <div class="values__item">
                                 <img class="values__icon" src="assets/images/values/aesthetics.svg" alt="">
                                 <div class="values__info">
