--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Наши услуги</title>
 </head>
 
@@ -88,7 +98,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Контакты</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">Контакты</h1>
                     </div>
                 </div>
             </div>
@@ -98,15 +108,15 @@
             <address class="contacts-row">
                 <div class="container">
                     <div class="contacts-row__inner">
-                        <div class="contacts-row__item">
+                        <div class="contacts-row__item" data-aos="fade-up">
                             <div class="contacts-row__name">Телефон:</div>
                             <div class="contacts-row__text">+7 (921) 969-77-71</div>
                         </div>
-                        <div class="contacts-row__item">
+                        <div class="contacts-row__item" data-aos="fade-up">
                             <div class="contacts-row__name">Email:</div>
                             <div class="contacts-row__text">sofigorod@yandex.ru</div>
                         </div>
-                        <div class="contacts-row__item">
+                        <div class="contacts-row__item" data-aos="fade-up">
                             <div class="contacts-row__name">Адрес:</div>
                             <div class="contacts-row__text">Санкт-Петербург</div>
                         </div>
@@ -122,10 +132,10 @@
             <div class="form">
                 <div class="container">
                     <div class="form__inner">
-                        <h3 class="form__title  form__title_white">У вас есть вопросы? Напишите нам</h3>
+                        <h3 class="form__title  form__title_white" data-aos="fade-up">У вас есть вопросы? Напишите нам</h3>
                         <form class="form__wrapper" action="/">
-                            <textarea class="form__input  form__input-area" name="" id="" placeholder="Ваш отзыв"></textarea>
-                            <div class="form__casing">
+                            <textarea class="form__input  form__input-area" name="" id="" placeholder="Ваш отзыв" data-aos="fade-right"></textarea>
+                            <div class="form__casing" data-aos="fade-left">
                                 <div class="form__group">
                                     <input class="form__input" type="text" placeholder="Ваше имя">
                                 </div>
