--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Фотогалерея</title>
 </head>
 
@@ -88,7 +98,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Фотогалерея</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">Фотогалерея</h1>
                     </div>
                 </div>
             </div>
@@ -97,7 +107,7 @@
         <main class="page">
             <div class="page__section  gallery">
                 <div class="container">
-                    <div class="filters-gallery">
+                    <div class="filters-gallery" data-aos="fade-in">
                         <div class="filters-gallery__item">Обзорные экскурсии по Санкт-Петербургу</div>
                         <div class="filters-gallery__item">Музеи</div>
                         <div class="filters-gallery__item">Пригороды Санкт-Петербурга</div>
@@ -105,32 +115,32 @@
                     </div>
 
                     <div class="gallery__inner">
-                        <div class="gallery__col">
+                        <div class="gallery__col" data-aos="fade-right">
                             <div class="gallery__item">
                                 <img class="gallery__img" src="assets/images/gallery/1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="gallery__col">
+                        <div class="gallery__col" data-aos="fade-right">
                             <div class="gallery__item  special">
                                 <img class="gallery__img" src="assets/images/gallery/1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="gallery__col">
+                        <div class="gallery__col" data-aos="fade-right">
                             <div class="gallery__item">
                                 <img class="gallery__img" src="assets/images/gallery/1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="gallery__col">
+                        <div class="gallery__col" data-aos="fade-right">
                             <div class="gallery__item">
                                 <img class="gallery__img" src="assets/images/gallery/1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="gallery__col">
+                        <div class="gallery__col" data-aos="fade-right">
                             <div class="gallery__item  special">
                                 <img class="gallery__img" src="assets/images/gallery/1.jpg" alt="">
                             </div>
                         </div>
-                        <div class="gallery__col">
+                        <div class="gallery__col" data-aos="fade-right">
                             <div class="gallery__item">
                                 <img class="gallery__img" src="assets/images/gallery/1.jpg" alt="">
                             </div>
