--- a/services-single.html
+++ b/services-single.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Наши услуги</title>
 </head>
 
@@ -88,7 +98,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Пешеходная Экскурсия</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">Пешеходная Экскурсия</h1>
                     </div>
                 </div>
             </div>
@@ -98,10 +108,10 @@
             <div class="page__section  services-single">
                 <div class="container">
                     <div class="services-single__header">
-                        <div class="services-single__img">
+                        <div class="services-single__img" data-aos="fade-right">
                             <img src="assets/images/services/preview1.jpg" alt="">
                         </div>
-                        <div class="services-single__info">
+                        <div class="services-single__info" data-aos="fade-left">
                             <div class="services-single__text">
                                 <p>
                                     <b>Место начала и окончания:</b> по согласованию, где вам удобно. У отеля, квартиры, вокзала, аэропорта.
@@ -137,7 +147,7 @@
                         </div>
                     </div>
                     <div class="services-single__inner">
-                        <div class="services-single__description">
+                        <div class="services-single__description" data-aos="fade-up">
                             <h2 class="services-single__title">Описание</h2>
                             <p class="services-single__text">
                                 «Петербург - многоликий город. Видите: сегодня у него таинственное и пугающее лицо. В белые ночи он очаровательно воздушен. Это - живой, глубоко чувствующий город» - Максим Горький. Предлагаем Вам прогулку по Петербургу, чтобы узнать в каком обличии он предстанет перед Вами.
@@ -147,23 +157,23 @@
                             </p>
                         </div>
                         <div class="faq" data-accordeon>
-                            <h2 class="services-single__title">Частые вопросы</h2>
+                            <h2 class="services-single__title" data-aos="fade-up">Частые вопросы</h2>
                             <ul class="faq__list">
-                                <li class="faq__item">
+                                <li class="faq__item" data-aos="fade-up">
                                     <button class="faq__control" type="button" aria-expanded="false">
                                         <div class="faq__name">Нам не удобны длительные пешие переходы по здоровью. Много ли надо будет ходить пешком?</div>
                                         <div class="faq__plus"></div>
                                     </button>
                                     <div class="faq__content" aria-hidden="true">На&nbsp;то&nbsp;экскурсия и&nbsp;индивидуальная, чтобы мы&nbsp;подстроились под ваши возможности, темп. По&nbsp;умолчанию мы&nbsp;минут 15-20 ходим вокруг Исаакиевского собора, у&nbsp;Медного всадника. Но, конечно, можем сократить выходы из&nbsp;автомобиля до&nbsp;минимума. Вам будет удобно.</div>
                                 </li>
-                                <li class="faq__item">
+                                <li class="faq__item" data-aos="fade-up">
                                     <button class="faq__control" type="button" aria-expanded="false">
                                         <div class="faq__name">Нам не удобны длительные пешие переходы по здоровью. Много ли надо будет ходить пешком?</div>
                                         <div class="faq__plus"></div>
                                     </button>
                                     <div class="faq__content" aria-hidden="true">На&nbsp;то&nbsp;экскурсия и&nbsp;индивидуальная, чтобы мы&nbsp;подстроились под ваши возможности, темп. По&nbsp;умолчанию мы&nbsp;минут 15-20 ходим вокруг Исаакиевского собора, у&nbsp;Медного всадника. Но, конечно, можем сократить выходы из&nbsp;автомобиля до&nbsp;минимума. Вам будет удобно.</div>
                                 </li>
-                                <li class="faq__item">
+                                <li class="faq__item" data-aos="fade-up">
                                     <button class="faq__control" type="button" aria-expanded="false">
                                         <div class="faq__name">Нам не удобны длительные пешие переходы по здоровью. Много ли надо будет ходить пешком?</div>
                                         <div class="faq__plus"></div>
