--- a/services.html
+++ b/services.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Наши услуги</title>
 </head>
 
@@ -89,7 +99,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Наши услуги</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">Наши услуги</h1>
                     </div>
                 </div>
             </div>
@@ -105,10 +115,10 @@
                     <div class="container">
                         <div class="item-services__inner">
                             <div class="item-services__top">
-                                <div class="item-services__preview">
+                                <div class="item-services__preview" data-aos="fade-right">
                                     <img src="assets/images/services/preview.jpg" alt="">
                                 </div>
-                                <div class="item-services__info">
+                                <div class="item-services__info" data-aos="fade-left">
                                     <h3 class="item-services__title">Обзорные экскурсии по Санкт-Петербургу</h3>
                                     <p class="item-services__desc">
                                         Индивидуальный маршрут с акцентом на главные достопримечательности Санкт-Петербурга, символы и архитектурные особенности города. Погрузимся в историю города с увлекательным рассказом о жизни, людях, событиях.
@@ -116,7 +126,7 @@
                                     <a class="btn  item-services__btn" href="/services-list.html">Программы</a>
                                 </div>
                             </div>
-                            <div class="item-services__bottom">
+                            <div class="item-services__bottom" data-aos="fade-up">
                                 <div class="item-services__col"><img src="assets/images/services/1.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/2.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/3.jpg" alt=""></div>
@@ -134,10 +144,10 @@
                     <div class="container">
                         <div class="item-services__inner">
                             <div class="item-services__top">
-                                <div class="item-services__preview">
+                                <div class="item-services__preview" data-aos="fade-right">
                                     <img src="assets/images/services/preview.jpg" alt="">
                                 </div>
-                                <div class="item-services__info">
+                                <div class="item-services__info" data-aos="fade-left">
                                     <h3 class="item-services__title">Обзорные экскурсии по Санкт-Петербургу</h3>
                                     <p class="item-services__desc">
                                         Индивидуальный маршрут с акцентом на главные достопримечательности Санкт-Петербурга, символы и архитектурные особенности города. Погрузимся в историю города с увлекательным рассказом о жизни, людях, событиях.
@@ -145,7 +155,7 @@
                                     <a class="btn  item-services__btn" href="/services-list.html">Программы</a>
                                 </div>
                             </div>
-                            <div class="item-services__bottom">
+                            <div class="item-services__bottom" data-aos="fade-up">
                                 <div class="item-services__col"><img src="assets/images/services/1.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/2.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/3.jpg" alt=""></div>
@@ -163,10 +173,10 @@
                     <div class="container">
                         <div class="item-services__inner">
                             <div class="item-services__top">
-                                <div class="item-services__preview">
+                                <div class="item-services__preview" data-aos="fade-right">
                                     <img src="assets/images/services/preview.jpg" alt="">
                                 </div>
-                                <div class="item-services__info">
+                                <div class="item-services__info" data-aos="fade-left">
                                     <h3 class="item-services__title">Обзорные экскурсии по Санкт-Петербургу</h3>
                                     <p class="item-services__desc">
                                         Индивидуальный маршрут с акцентом на главные достопримечательности Санкт-Петербурга, символы и архитектурные особенности города. Погрузимся в историю города с увлекательным рассказом о жизни, людях, событиях.
@@ -174,7 +184,7 @@
                                     <a class="btn  item-services__btn" href="/services-list.html">Программы</a>
                                 </div>
                             </div>
-                            <div class="item-services__bottom">
+                            <div class="item-services__bottom" data-aos="fade-up">
                                 <div class="item-services__col"><img src="assets/images/services/1.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/2.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/3.jpg" alt=""></div>
@@ -192,10 +202,10 @@
                     <div class="container">
                         <div class="item-services__inner">
                             <div class="item-services__top">
-                                <div class="item-services__preview">
+                                <div class="item-services__preview" data-aos="fade-right">
                                     <img src="assets/images/services/preview.jpg" alt="">
                                 </div>
-                                <div class="item-services__info">
+                                <div class="item-services__info" data-aos="fade-left">
                                     <h3 class="item-services__title">Обзорные экскурсии по Санкт-Петербургу</h3>
                                     <p class="item-services__desc">
                                         Индивидуальный маршрут с акцентом на главные достопримечательности Санкт-Петербурга, символы и архитектурные особенности города. Погрузимся в историю города с увлекательным рассказом о жизни, людях, событиях.
@@ -203,7 +213,7 @@
                                     <a class="btn  item-services__btn" href="/services-list.html">Программы</a>
                                 </div>
                             </div>
-                            <div class="item-services__bottom">
+                            <div class="item-services__bottom" data-aos="fade-up">
                                 <div class="item-services__col"><img src="assets/images/services/1.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/2.jpg" alt=""></div>
                                 <div class="item-services__col"><img src="assets/images/services/3.jpg" alt=""></div>
