--- a/services-list.html
+++ b/services-list.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Наши услуги</title>
 </head>
 
@@ -88,7 +98,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Обзорная Экскурсия по&nbsp;Санкт-Петербургу</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">Обзорная Экскурсия по&nbsp;Санкт-Петербургу</h1>
                     </div>
                 </div>
             </div>
@@ -112,10 +122,10 @@
 
                     <div class="services-list__inner">
                         <article class="services-list__item">
-                            <div class="services-list__preview">
+                            <div class="services-list__preview" data-aos="fade-right">
                                 <img src="assets/images/services/preview.jpg" alt="">
                             </div>
-                            <div class="services-list__info">
+                            <div class="services-list__info" data-aos="fade-left">
                                 <h3 class="services-list__title">Пешеходная экскурсия</h3>
                                 <p class="services-list__desc">
                                     Петербург - многоликий город. Видите: сегодня у него таинственное и пугающее лицо. В белые ночи он очаровательно воздушен. Это - живой, глубоко чувствующий город» - Максим Горький. Предлагаем Вам прогулку по Петербургу, чтобы узнать в каком обличии он предстанет перед Вами.
@@ -124,10 +134,10 @@
                             </div>
                         </article>
                         <article class="services-list__item">
-                            <div class="services-list__preview">
+                            <div class="services-list__preview" data-aos="fade-right">
                                 <img src="assets/images/services/preview.jpg" alt="">
                             </div>
-                            <div class="services-list__info">
+                            <div class="services-list__info" data-aos="fade-left">
                                 <h3 class="services-list__title">Пешеходная экскурсия</h3>
                                 <p class="services-list__desc">
                                     Петербург - многоликий город. Видите: сегодня у него таинственное и пугающее лицо. В белые ночи он очаровательно воздушен. Это - живой, глубоко чувствующий город» - Максим Горький. Предлагаем Вам прогулку по Петербургу, чтобы узнать в каком обличии он предстанет перед Вами.
@@ -136,10 +146,10 @@
                             </div>
                         </article>
                         <article class="services-list__item">
-                            <div class="services-list__preview">
+                            <div class="services-list__preview" data-aos="fade-right">
                                 <img src="assets/images/services/preview.jpg" alt="">
                             </div>
-                            <div class="services-list__info">
+                            <div class="services-list__info" data-aos="fade-left">
                                 <h3 class="services-list__title">Пешеходная экскурсия</h3>
                                 <p class="services-list__desc">
                                     Петербург - многоликий город. Видите: сегодня у него таинственное и пугающее лицо. В белые ночи он очаровательно воздушен. Это - живой, глубоко чувствующий город» - Максим Горький. Предлагаем Вам прогулку по Петербургу, чтобы узнать в каком обличии он предстанет перед Вами.
