--- a/team.html
+++ b/team.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+
+
+    <!-- Анимации -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <title>SG Art project - Наши услуги</title>
 </head>
 
@@ -88,7 +98,7 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Команда</h1>
+                        <h1 class="intro__title  intro__title_s" data-aos="fade-up">Команда</h1>
                     </div>
                 </div>
             </div>
@@ -98,10 +108,10 @@
             <section class="page__section  team-preview  background-line-left">
                 <div class="container">
                     <div class="team-preview__inner">
-                        <div class="team-preview__image">
+                        <div class="team-preview__image" data-aos="fade-right">
                             <img src="assets/images/team/1.jpg" alt="">
                         </div>
-                        <div class="team-preview__info">
+                        <div class="team-preview__info" data-aos="fade-left">
                             <h2 class="team-preview__title">София</h2>
                             <p class="team-preview__desc">
                                 Руководитель проекта, искусствовед, профессиональный гид-переводчик, лектор.
@@ -114,7 +124,7 @@
                                 +7 (921) 969-77-71
                             </a>
 
-                            <ul class="progress  progress_background">
+                            <ul class="progress  progress_background" data-aos="fade-up">
                                 <li class="progress__item">
                                     <div class="progress__value">10 лет</div>
                                     <div class="progress__text">Успешной работы</div>
@@ -139,7 +149,7 @@
 
                 <div class="container">
                     <div class="team__inner  team__inner_two-by-two">
-                        <div class="team__col">
+                        <div class="team__col" data-aos="fade-right">
                             <div class="team__item">
                                 <div class="tema__header">
                                     <a class="team__btn" href="#"></a>
@@ -159,7 +169,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="team__col">
+                        <div class="team__col" data-aos="fade-right">
                             <div class="team__item">
                                 <div class="tema__header">
                                     <a class="team__btn" href="#"></a>
@@ -179,7 +189,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="team__col">
+                        <div class="team__col" data-aos="fade-right">
                             <div class="team__item">
                                 <div class="tema__header">
                                     <a class="team__btn" href="#"></a>
@@ -199,7 +209,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="team__col">
+                        <div class="team__col" data-aos="fade-right">
                             <div class="team__item">
                                 <div class="tema__header">
                                     <a class="team__btn" href="#"></a>
